# xftp2

./: .gitignore  CMakeLists.txt  README.md  README_en.md  install.sh  main.cpp
config/: users.cfg  xftp.service
data/: server.cfg  users.cfg  xftp.service
src/: common.cpp  common.h  ftp_server.cpp  ftp_server.h  ftp_server_config.cpp  ftp_server_config.h  ftp_session.cpp  ftp_session.h  ftp_transaction.cpp  ftp_transaction.h  ftp_user_info.cpp  ftp_user_info.h  main.cpp
src/ftptrans/: ftp_trans_login.cpp  ftp_trans_login.h  ftp_transaction.cpp  ftp_transaction.h
test/: test_adjust_path.cpp  test_ftp_server.cpp  test_ifstream.cpp  test_popen.cpp
xftp/: xftp.service
xftp/config/: server.cfg  users.cfg
xftp/root/: welcome.txt
